Cambiados hovers y colores

--- a/Community/index.html
+++ b/Community/index.html
@@ -57,8 +57,8 @@
 				<!-- Canvas to draw the pieces -->
 				<canvas class="pieces-slider__canvas"></canvas>
 				<!-- Slider buttons: prev and next -->
-				<button class="pieces-slider__button pieces-slider__button--prev"><img src="https://cdn-icons-png.flaticon.com/512/591/591855.png" alt="arrow_right" width="35" style="transform:rotate(180deg);filter: invert();"></button>
-				<button class="pieces-slider__button pieces-slider__button--next"><img src="https://cdn-icons-png.flaticon.com/512/591/591855.png" alt="arrow_right" width="35" style="filter: invert()"></button>
+				<button class="pieces-slider__button pieces-slider__button--prev"><img src="https://cdn-icons-png.flaticon.com/512/591/591855.png" alt="arrow_right" width="35" style="transform:rotate(180deg);"></button>
+				<button class="pieces-slider__button pieces-slider__button--next"><img src="https://cdn-icons-png.flaticon.com/512/591/591855.png" alt="arrow_right" width="35"></button>
 			</div>
 		</div>
 	</main>
