--- a/Community/index.html
+++ b/Community/index.html
@@ -13,7 +13,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE-edge, chrome1">
 	<meta http-equiv="refresh" content="300" ; URL="index.html">
 	<meta name="robots" content="INDEX,FOLLOW" />
-	<link rel="shortcut icon" href="https://media.discordapp.net/attachments/1045753110355791882/1045761430378528829/logo.png?width=325&height=325">
+	<link rel="shortcut icon" href="../src/logo.png">
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
 	<link rel="stylesheet" type="text/css" href="css/slider.css" />
 	<script>document.documentElement.className = "js"; var supportsCssVars = function () { var e, t = document.createElement("style"); return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e }; supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
@@ -25,7 +25,7 @@
 			<header class="codrops-header">
 				<div class="codrops-links">
 					<a class="codrops-icon codrops-icon--prev"
-						href="../dist/index.html" title="Index"><img src="https://media.discordapp.net/attachments/1045753110355791882/1045761430378528829/logo.png?width=325&height=325" alt="" width="20"></a>
+						href="../dist/index.html" title="Index"><img src="../src/logo.png" alt="" width="20"></a>
 				</div>
 				<h1 class="codrops-header__title">¡Últimos eventos!</h1>
 			</header>
